--- a/app/mian.html
+++ b/app/mian.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link rel="stylesheet" type="text/css" href="../css/mui.min.css"/>
+		<link rel="stylesheet" type="text/css" href="css/mui.min.css"/>
 		<script type="text/javascript">
-			document.write("<link rel=\"stylesheet\" href=\"../css/app.css?"+Math.random()+"\" type=\"text/css\" media=\"screen\"/>");
-			document.write("<script src=\"../js/common.js?"+Math.random()+"\" type=\"text/javascript\" charset=\"utf-8\"><\/script>");
+			document.write("<link rel=\"stylesheet\" href="+Math.random()+"\"css/app.css?\" type=\"text/css\" media=\"screen\"/>");
+			document.write("<script src="+Math.random()+"\"js/common.js?\" type=\"text/javascript\" charset=\"utf-8\"><\/script>");
 			
 			function to(url){
 				window.location.href=url;
@@ -31,7 +31,7 @@
 		            <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-4">
 		                    <div class="mui-media-body">标准工作审批</div>
 		                    <div class="mui-media-body">流程表格</div></li>
-		            <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-4" onclick="to('txl/zzjg.html')">
+		            <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-4" onclick="to('html/txl/zzjg.html')">
 		                    <div class="mui-media-body" >组织功能组别/项目管</div>
 		                    <div class="mui-media-body" >理部人员联系讯息</div></li>
 		        	<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-4">
@@ -51,7 +51,7 @@
 		        </ul> 
 		</div>
 		
-		<script src="../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/mui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init({
 			  preloadPages:[
