--- a/app/html/address_user.html
+++ b/app/html/address_user.html
@@ -32,18 +32,9 @@
 				<li class="mui-table-view-cell"><span>部门：项目管理部</span></li>-->
 			</ul>
 		</div>
-		<script type="text/javascript" src="../js/jquery.min.js" ></script>
+		<script src="../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/common.js" ></script>
-		<script type="text/javascript" src="../js/ajax-util.js" ></script>
-		<script src="../js/mui.min.js"></script>
 		<script src="js/address_user.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript">
-			mui.init()
-			$(function(){
-				var userId=getQueryString("userId");
-				init(userId);
-			})
-		</script>
 	</body>
 
 </html>
