--- a/app/html/notice_detail.html
+++ b/app/html/notice_detail.html
@@ -18,21 +18,24 @@
 		</header>
 		<div class="mui-content">
 			<div class="mui-content-padded">
-				<h3>关于新启用项目管理流程“博建施工管理系统”</h3>
+				<!--<h3>关于新启用项目管理流程“博建施工管理系统”</h3>
 				<h6>
 					<span>2018.7.10</span>
 					&nbsp;
 					<span>人力/财政-张三</span>
 				</h6>
 				<p>
-					一百多年以来,公司所推崇的“研究,创新,追求高品质”的经营哲学使公司的
-					研发拥有坚实的基础。1911年诞生的油包水专利配方的妮维雅润肤霜是公
+					
 					司在化妆品事业部研发的开始。今天,在全球公认的最具权威性的肌肤及医。
-				</p>
+				</p>-->
+			</div>
+			<div class="filelist">
+				附件：
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/notice_detail.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 
 </html>
