--- a/app/html/notice_list.html
+++ b/app/html/notice_list.html
@@ -17,18 +17,16 @@
 			<h1 class="mui-title">公告</h1>
 		</header>
 		<div class="mui-content">
-			<div class="mui-card" onclick="toGgxqPage()">
-				<!--页眉，放置标题-->
+			<!--
+            <div class="mui-card" onclick="toGgxqPage()">
 				<div class="mui-card-header" id="title">
 					关于新启用项目管理流程
 				</div>
-				<!--内容区-->
 				<div class="mui-card-content">
 					<div class="mui-card-content-inner" id="synopsis">
 						包含页眉页脚的卡片，页眉常用来显示面板标题，页脚用来显示额外信息或支持的操作（比如点赞、评论等）
 					</div>
 				</div>
-				<!--页脚，放置补充信息或支持的操作-->
 				<div class="mui-card-footer">
 					<span id="time">
 						2018.7.10
@@ -37,7 +35,7 @@
 						人力/财政-张三
 					</span>
 				</div>
-			</div>
+			</div> -->
 			
 		</div>
 		<script src="../js/mui.min.js"></script>
